gcc/testsuite/g++.dg/template/crash77.C
@@ -1,0 +1,5 @@
+// PR c++/34603
+
+template<typename> struct A; // { dg-error "declaration" }
+
+template<typename T> A<T>::A( struct A; // { dg-error "definition|expected|incomplete" }
